--- a/index.html
+++ b/index.html
@@ -5,7 +5,33 @@
     <title>Tea Cozy</title>
     <link href=".resources/css/style.css" rel="stylesheet" type="text/css" />
   </head>
+
   <body>
+
+    <!-- header -->
+
+    <header>
+      <div class="logo">
+        <img src="./resources/images/img-tea-cozy-logo.png" />
+      </div>
+
+      <nav>
+        <span id="mission">Mission</span>
+        <span id="featured">Featured Tea</span>
+        <span id="locations">Locations</span>
+      </nav>
+
+    </header>
+
+    <!--content starts-->
+
+    <!-- mission -->
+
+    <!-- featured teas -->
+
+    <!-- locations -->
+
+    <!-- footer -->
 
   </body>
 </html>
