--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tea Cozy</title>
-    <link href=".resources/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="./resources/css/style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -16,9 +16,9 @@
       </div>
 
       <nav>
-        <span id="mission">Mission</span>
-        <span id="featured">Featured Tea</span>
-        <span id="locations">Locations</span>
+        <span> <a href="#mission">Mission</a></span>
+        <span> <a href="#featured">Featured Tea</a></span>
+        <span> <a href="#locations">Locations</a></span>
       </nav>
 
     </header>
