Started Mission Section

--- a/index.html
+++ b/index.html
@@ -25,11 +25,22 @@
 
     <!--content starts-->
 
+    <div class="content">
+
     <!-- mission -->
+
+      <div class="mission">
+        <span class="mission-text">
+          <h2 id="mission">Our Mission<h2>
+          <h3>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h3>
+        </div>
+      </div>
 
     <!-- featured teas -->
 
     <!-- locations -->
+
+    </div>
 
     <!-- footer -->
 
