finished mission section

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <!-- mission -->
 
       <div class="mission">
-        <span class="mission-text">
+        <span>
           <h2 id="mission">Our Mission<h2>
           <h3>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h3>
-        </div>
+        </span>
       </div>
 
     <!-- featured teas -->
