--- a/index.html
+++ b/index.html
@@ -29,22 +29,27 @@
 
     <!-- mission -->
 
-      <div class="mission">
+      <div class="mission" id="mission">
         <span>
-          <h2 id="mission">Our Mission<h2>
+          <h2>Our Mission<h2>
           <h3>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h3>
         </span>
       </div>
 
-      <!-- featured teas -->
+      <!-- featured teas header -->
 
-      <div class="featured">
+      <div class="featured" id="featured">
 
-          <span>
-            <h2 id="featured">Tea of the Month</h2>
-            <h4>What's Steeping at The Tea Cozy?</h4>
-          </span>
+        <span>
+          <h2>Tea of the Month</h2>
+          <h4>What's Steeping at The Tea Cozy?</h4>
+        </span>
 
+      </div>
+
+      <!-- teas start -->
+
+      <div class="tea-container">
 
           <!-- tea 1 -->
 
@@ -62,11 +67,35 @@
 
           <!-- tea 3 -->
 
+          <div class="tea">
+            <img src="./resources/images/img-donut.jpg" />
+            <h4>Seasonal Donuts</h4>
+          </div>
+
+          <!-- tea 4 -->
+
+          <div class="tea">
+            <img src="./resources/images/img-myrtle-ave.jpg" />
+            <h4>Myrtle Ave Tea</h4>
+          </div>
+
+          <!-- tea 5 -->
+
+          <div class="tea">
+            <img src="./resources/images/img-bedford-bizarre.jpg" />
+            <h4>Bedford Bizarre Tea</h4>
+          </div>
+
       </div>
 
       <!-- locations -->
 
-    </div>
+      <div class="location-container">
+
+        
+
+      </div>
+
 
     <!-- footer -->
 
