setting up locations section

--- a/index.html
+++ b/index.html
@@ -54,28 +54,28 @@
           <!-- tea 1 -->
 
           <div class="tea">
-            <img src="./resources/images/img-berryblitz.jpg" />
+            <img src="./resources/images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea" />
             <h4>Fall Berry Blitz Tea</h4>
           </div>
 
           <!-- tea 2 -->
 
           <div class="tea">
-            <img src="./resources/images/img-spiced-rum.jpg" />
+            <img src="./resources/images/img-spiced-rum.jpg" alt="Spiced Rum Tea" />
             <h4>Spiced Rum Tea</h4>
           </div>
 
           <!-- tea 3 -->
 
           <div class="tea">
-            <img src="./resources/images/img-donut.jpg" />
+            <img src="./resources/images/img-donut.jpg" alt="Seasonal Donuts" />
             <h4>Seasonal Donuts</h4>
           </div>
 
           <!-- tea 4 -->
 
           <div class="tea">
-            <img src="./resources/images/img-myrtle-ave.jpg" />
+            <img src="./resources/images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea" />
             <h4>Myrtle Ave Tea</h4>
           </div>
 
@@ -91,12 +91,27 @@
       <!-- locations -->
 
       <div class="location-container">
+        <span>
+          <h2>Locations</h2>
+        </span>
 
-        
+        <div class="location">
+          <h3>Downtown</h3>
+          <p>384 West 4th St</p>
+          <p>Suite 108</p>
+          <p>Portland, Maine</p>
+        </div>
+
+        <div class="location">
+          <h3>East Bay</h3>
+          <p>384 West 4th St</p>
+          <p>Suite 108</p>
+          <p>Portland, Maine</p>
+        </div>
 
       </div>
 
-
+    </div>
     <!-- footer -->
 
   </body>
