--- a/index.html
+++ b/index.html
@@ -90,10 +90,14 @@
 
       <!-- locations -->
 
-      <div class="location-container">
-        <span>
+      <div class="location-container" id="locations">
+
+
+        <div class="location-title">
           <h2>Locations</h2>
-        </span>
+        </div>
+
+        <div class="location-blocks">
 
         <div class="location">
           <h3>Downtown</h3>
@@ -104,11 +108,18 @@
 
         <div class="location">
           <h3>East Bay</h3>
-          <p>384 West 4th St</p>
-          <p>Suite 108</p>
+          <p>3433 Phisherman's Avenue</p>
+          <p>(Northwest Corner)</p>
           <p>Portland, Maine</p>
         </div>
 
+        <div class="location">
+          <h3>Oakdale</h3>
+          <p>3433 Phisherman's Avenue</p>
+          <p>Second Floor</p>
+          <p>Portland, Maine</p>
+        </div>
+        </div>
       </div>
 
     </div>
