--- a/index.html
+++ b/index.html
@@ -94,33 +94,42 @@
 
 
         <div class="location-title">
-          <h2>Locations</h2>
+            <h2>Locations</h2>
         </div>
+
 
         <div class="location-blocks">
 
-        <div class="location">
-          <h3>Downtown</h3>
-          <p>384 West 4th St</p>
-          <p>Suite 108</p>
-          <p>Portland, Maine</p>
-        </div>
+          <div class="location">
+            <h3>Downtown</h3>
+            <p>384 West 4th St</p>
+            <p>Suite 108</p>
+            <p>Portland, Maine</p>
+          </div>
 
-        <div class="location">
-          <h3>East Bay</h3>
-          <p>3433 Phisherman's Avenue</p>
-          <p>(Northwest Corner)</p>
-          <p>Portland, Maine</p>
-        </div>
+          <div class="location">
+            <h3>East Bay</h3>
+            <p>3433 Phisherman's Avenue</p>
+            <p>(Northwest Corner)</p>
+            <p>Portland, Maine</p>
+          </div>
 
-        <div class="location">
-          <h3>Oakdale</h3>
-          <p>3433 Phisherman's Avenue</p>
-          <p>Second Floor</p>
-          <p>Portland, Maine</p>
-        </div>
+          <div class="location">
+            <h3>Oakdale</h3>
+            <p>3433 Phisherman's Avenue</p>
+            <p>Second Floor</p>
+            <p>Portland, Maine</p>
+          </div>
+
         </div>
       </div>
+
+      <!-- contact -->
+
+      <div class="contact">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
 
     </div>
     <!-- footer -->
