--- a/index.html
+++ b/index.html
@@ -130,9 +130,17 @@
         <h2>The Tea Cozy</h2>
         <h5>contact@theteacozy.com</h5>
         <h5>917-555-8904</h5>
+      </div>
 
     </div>
+
     <!-- footer -->
+
+
+    <footer>
+      <h5>Copyright The Tea Cozy 2017</h5>
+    </footer>
+
 
   </body>
 </html>
